# slave_spins

./: .gitignore  CMakeLists.txt  Makefile  README.md  SLAVE_SPINS.f90  SS_INPUT_VARS.f90  SS_IO.f90  SS_MAIN.f90  SS_SETUP.f90  SS_SOLVE_FERMION.f90  SS_SOLVE_MAIN.f90  SS_SOLVE_SPIN.f90  SS_SPARSE_MATRIX.f90  SS_VARS_GLOBAL.f90  setup.py  ss_main_lf_solve.h90  ss_main_solve_full.h90  ss_main_solve_gg.h90  ss_main_solve_lf.h90
drivers/: ss_DFT.f90  ss_LaOFeAs.f90  ss_PCO.f90  ss_hm_2d.f90  ss_hm_bethe.f90  ss_hm_bethe_ineq.f90
drivers/.repo/: Makefile  SS_MAIN.f90  indexx.f  ss_hm_bethe.f90
drivers/.repo/LF_ss/: fermion_equiv.f90  slave_equiv_r.f90
drivers/.repo/SS_MAIN/: ss_main_solve_full.h90  ss_main_solve_lf.h90
etc/: slave_spins.pc.in
etc/environment_modules/: module.in
python/sspy/: __init__.py
repo/: LOG.out  quicksort.f90  revision.inc  test_sort.f90
repo/GG_ss/: main_SS_SS_multisites_sym.f
repo/GG_ss/test/: INPUT.in  INPUT.in~  Z_n_U_Jh  ZvsU.data  list_var  loopSERIALlanced.pbs  loopSERIALlanced.pbs~  parameters  parameters~  ssHMmit.o1993  ssHMmit.o1995  ssHMmit.o1996  tmp
repo/GG_ss/test/U0.0/: INPUT.in  parameters
repo/LF_ss/: Main_UJHU_V_real.f90  a.out  pspin_corr.f90  slave_equiv_r.f90
repo/LF_ss/test/: fort.31  ss_laura
src/: CMakeLists.txt  SLAVE_SPINS.f90  SS_INPUT_VARS.f90  SS_IO.f90  SS_MAIN.f90  SS_SETUP.f90  SS_SOLVE_FERMION.f90  SS_SOLVE_MAIN.f90  SS_SOLVE_SPIN.f90  SS_SPARSE_MATRIX.f90  SS_VARS_GLOBAL.f90  SS_VERSION.f90  revision.in
src/ss2py/: ss2py.f90  ss2py_input.h90  ss2py_io.h90  ss2py_main.h90
(+479 files in other folders)
