# # DMFT_ED library
#Generate version module:
CONFIGURE_FILE(${LIB_SRC}/revision.in ${LIB_SRC}/SS_VERSION.f90 @ONLY)

FILE(GLOB SS_GLOB_SRC
  SS_VERSION.f90
  SS_SPARSE_MATRIX.f90
  SS_INPUT_VARS.f90
  SS_VARS_GLOBAL.f90
  SS_SETUP.f90
  SS_IO.f90
  SS_SOLVE_FERMION.f90
  SS_SOLVE_SPIN.f90
  SS_SOLVE_MAIN.f90
  SS_MAIN.f90 
  SLAVE_SPINS.f90
  )
ADD_LIBRARY(SS_GLOB_LIB OBJECT ${SS_GLOB_SRC})
